# nih

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  nih.scm
cmake/: nih-config.cmake.in  sanitizer.cmake
cmake/modules/: FindASan.cmake  FindLSan.cmake  FindTSan.cmake
examples/: CMakeLists.txt  strings.cc
include/nih/: Algorithm.h  Charconv.h  Documents.h  IO.h  Intrinsics.h  IntrusivePtr.h  Json.h  JsonIO.h  Logging.h  Omp.h  Sample.h  String.h  StringRef.h  Tempfile.h  Test_Span.h  Testing.h  charconv.hh  concept.h  concept.hh  config.hh  errors.hh  file.h  file.hh  fpconv.hh  functional.h  functional.hh  intrusive_ptr.hh  json.h  json.hh  json_experimental.hh  json_io.h  json_io.hh  json_reader_experimental.hh  json_recursive_reader.hh  json_writer_experimental.hh  logging.h  logging.hh  luts.hh  math.h  math.hh  (+19 more)
include/nih/C/: logging.h  nih.h
src/: Charconv.cc  Json.cc  Logging.cc  api_errors.h  errors.cc  file.cc  json.cc  json_experimental.cc  logging.cc  memory.cc  path.cc  random.cc  ryu.cc  uri.cc
tests/: test_main.cc
tests/unittests/: Test_Algorithm.cc  Test_Charconv.cc  Test_IntrusivePtr.cc  Test_Json.cc  Test_Logging.cc  Test_Range.cc  Test_Span.cc  Test_String.cc  Test_Tempfile.cc  concept.cc  errors.cc  file.cc  intrusive_ptr.cc  json.cc  logging.cc  math.cc  memory.cc  monitor.cc  path.cc  range.cc  strings.cc  test_json.cc  test_json_experimental.cc  test_json_io_experimental.cc  test_span.cc
